# hello-discord-rs

./: Cargo.toml  README.md
register/: .env-sample  Cargo.toml
register/src/: client.rs  lib.rs  main.rs
register/src/command/: command.rs  mod.rs  option.rs
serde-discord/: Cargo.toml
serde-discord/src/register/command/: choice.rs
serde_discord/: Cargo.toml
serde_discord/src/register/command/: option.rs
worker/: .gitignore  Cargo.toml  wrangler.toml
worker/src/: lib.rs  parse.rs  verify.rs
worker/src/commands/: mod.rs  roll.rs
worker/src/interaction/: command.rs  mod.rs
worker/src/response/: mod.rs  response.rs
worker/src/response/message/component/: select_menu.rs
