[package]
name = "worker"
version = "0.1.0"
edition = "2021"
authors = [ "rmarinn <34529290+rmarinn@users.noreply.github.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.4.1" }
worker-macros = { version="0.4.1" }
console_error_panic_hook = { version = "0.1.1" }
dotenvy = "0.15.7"
ed25519-dalek = "2.1.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_repr = "0.1.19"
hex = "0.4.3"
bitflags = "2.6.0"
